--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -13,9 +13,12 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
+      with:
+        submodules: true
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
+
     - name: Lint Dockerfile with Hadolint
       uses: hadolint/hadolint-action@v3.1.0
       with:
