--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -42,6 +42,7 @@ jobs:
         push: true
         tags: |
           ghcr.io/${{ github.repository }}:${{ github.sha }}
+          ghcr.io/${{ github.repository }}:latest
 
     - name: Trivy vulnerability scan
       uses: aquasecurity/trivy-action@master
